feat: fix Render + Cloudflare deployment and implement comprehensive architecture improvements
- Fixed critical redirect loop issues by configuring session cookies for Cloudflare proxy compatibility (SameSite=lax, dynamic secure settings)
- Enhanced SecurityConfig with environment-aware configuration and modern Spring Security 6.1+ syntax to eliminate deprecation warnings
- Implemented DTO layer with request/response objects for better API contracts and validation boundaries
- Added centralized SessionManagementService with redirect-safe authentication and proper session lifecycle management
- Introduced Cloudflare header processing filter for accurate client IP detection through proxy (CF-Connecting-IP → X-Forwarded-For priority)
- Configured Tomcat RemoteIP valve to trust Cloudflare IP ranges and handle protocol forwarding correctly
- Added security interceptor for granular authentication control on protected endpoints (/dashboard, /generate, /edit, /delete)
- Implemented constants and utility classes for better maintainability (SecurityConstants, MessageConstants, ValidationUtil, ResponseUtil, EncryptionUtil)
- Enhanced PasswordManagementService with improved transaction boundaries, validation, and better error handling
- Updated SecurityUtil with priority-based IP detection and Cloudflare-aware protocol/country detection
- Improved global exception handling with specific exception types (VaultException, better error categorization) and user-friendly messages
- Added error page system with custom 404/500/403 pages and generic error handling matching application design
- Enhanced Controllers with DTO usage, focused methods, and consistent error handling patterns
- Updated application.properties with dynamic environment-aware configuration for development vs production deployment
- Added AsyncConfig and ValidationConfig for future extensibility and method-level validation support
- Implemented ApplicationProperties enhancements to support Cloudflare configuration a